# rust-low-latency-hft

./: .gitignore  Benchmark-Methodology.md  Cargo.toml  README.md  run-benchmarks-and-report.sh  run-benchmarks-linux-revert.sh  run-benchmarks-linux-setup.sh  run-benchmarks-linux.sh
.cursor/rules/: rust-clippy-check.mdc
.github/workflows/: benchmark.yml  build.yml
bench-results/_linux1/matching-pipeline/: pipeline.json  report.md
bench-results/_linux1/v0/: lob.json  lob.md
bench-results/_linux1/v1/: lob.md
bench-results/_macos/matching-pipeline/: pipeline.json  report.md
bench-results/_macos/v0/: lob.json  lob.md
bench-results/_macos/v1/: lob.md
bench-results/macos/v1/: lob.md
bench-results/market-data-handler/: report.md  tick_to_trade.json
bench-results/matching-pipeline/: pipeline.json  report.md
bench-results/v0/: lob.json  lob.md
bench-results/v1/: lob.md
bench-tool/: Cargo.toml
bench-tool/src/: cli.rs  comparison.rs  format.rs  format_unit.rs  hardware.rs  lib.rs  renderer.rs  report.rs  runner.rs  runtime_tuning.rs
bench-tool/src/sync_util/: mod.rs  notify_gate.rs
bench_results/market-data-handler/: report.md  tick_to_trade.json
dev/bench/: data.js
limit-order-book/: Cargo.toml  README.md  flamegraph.sh  run-benchmarks-and-report.sh  run-benchmarks-and-reports.sh
limit-order-book/bench-results/v0/: lob.json  lob.md
limit-order-book/bench-results/v1/: lob.md
limit-order-book/benches/: lob.rs  lob_bench.rs  lob_criterion.rs  lob_latency.rs
limit-order-book/src/: book.rs  book_api.rs  book_tests_common.rs  event.rs  lib.rs  order.rs  price_level.rs  types.rs
limit-order-book/src/book_v0/: book.rs  book_tests.rs  mod.rs  price_level.rs
limit-order-book/src/book_v1/: book.rs  book_tests.rs  mod.rs  orders.rs  price_level.rs
lockfree-queue/: Cargo.toml  README.md
lockfree-queue/src/: lib.rs  mpsc.rs  spsc.rs
market-data-feed/: Cargo.toml  README.md
market-data-feed/src/: decode.rs  error.rs  feed_book.rs  ingest.rs  lib.rs  message.rs
market-data-handler/: Cargo.toml  README.md
market-data-handler/benches/: tick_to_trade.rs
market-data-handler/src/: decode.rs  error.rs  itch.rs  itch_to_book.rs  lib.rs  mold_udp64.rs  outbound.rs  pipeline.rs  reorder.rs  strategy.rs  udp_receiver.rs
market-data-handler/src/util/: latency.rs
market-data-handler/tests/: ooo_udp.rs
matching-pipeline/: Cargo.toml  README.md
matching-pipeline/benches/: lobster_goog.rs  pipeline.rs
matching-pipeline/src/: command.rs  consumer.rs  lib.rs  lobster.rs  pipeline.rs  test_data.rs
matching-pipeline/tests/: lobster_goog.rs
