[package]
name = "bench-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
core_affinity = "0.8"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
quanta = "0.12"
serde_json = "1"
stats_alloc = "0.1"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
