[package]
name = "bench-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
limit-order-book = { workspace = true }
core_affinity = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
serde = { workspace = true }
quanta = { workspace = true }
serde_json = { workspace = true }
stats_alloc = { workspace = true }
sysinfo = { workspace = true }
