[package]
name = "limit-order-book"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"

[[bench]]
name = "lob_bench"
harness = false

[[bench]]
name = "lob_latency"
harness = false
