[package]
name = "limit-order-book"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
bench-tool = { path = "../bench-tool" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lob_criterion"
harness = false

[[bench]]
name = "lob"
harness = false
