[package]
name = "limit-order-book"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
slab = { workspace = true }

[dev-dependencies]
bench-tool = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lob_criterion"
harness = false

[[bench]]
name = "lob"
harness = false
