[package]
name = "matching-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
limit-order-book = { workspace = true }
lockfree-queue = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bench-tool = { workspace = true }

[[bench]]
name = "pipeline"
harness = false
